--- a/4. 扩展指南/8. 笔记本.md
+++ b/4. 扩展指南/8. 笔记本.md
@@ -349,3 +349,170 @@ export const activate: ActivationFunction = (context) => ({
 在一个输出单元格使用`ms-vscode.github-issue-notebook/github-issue`数据字段运行这个渲染器给我们下面静态HTML视图：
 
 ![](https://code.visualstudio.com/assets/api/extension-guides/notebook/static-renderer-sample.png)
+
+如果您有容器外的元素或其他异步进程，您可以使用`disposeOutputItem`摧毁它们。这个事件会在输出清空，删除一个单元格和一个存在单元格的新输出渲染时触发。例如：
+
+```typescript
+const intervals = new Map();
+
+export const activate: ActivationFunction = (context) => ({
+    renderOutputItem(data, element) {
+        render(<GithubIssues issues={data.json()} />, element);
+
+        intervals.set(data.mime, setInterval(() => {
+            if(element.querySelector('h2')) {
+                element.querySelector('h2')!.style.color = `hsl(${Math.random() * 360}, 100%, 50%)`;
+            }
+        }, 1000));
+    },
+    disposeOutputItem(id) {
+        clearInterval(intervals.get(id));
+        intervals.delete(id);
+    }
+});
+```
+
+重要的是，请牢记一个笔记本的所有输出在相同的内联框架的不同的元素中渲染。如果您使用如`document.querySelector`之类的函数，确保确定您专注的具体的输出的范围来避免与其他输出的冲突。在这个例子，我们使用`element.querySelector`来避免这个问题
+
+### 可交互笔记本（与控制器交流）
+
+想象我们添加要在渲染的输出中点击按钮添加查看Issue的评论的功能。假定一个控制器可以提供`ms-vscode.github-issue-notebook/github-issue-with-comments`MIME类型下带有评论的Issue数据，我们也许尝试检索了所有前端评论并如下实现：
+
+```typescript
+const Issue: FunctionComponent<{ issue: GithubIssueWithComments }> = ({ issue }) => {
+  const [showComments, setShowComments] = useState(false);
+
+  return (
+    <div key={issue.number}>
+      <h2>
+        {issue.title}
+        (<a href={`https://github.com/${issue.repo}/issues/${issue.number}`}>#{issue.number}</a>)
+      </h2>
+      <img src={issue.user.avatar_url} style={{ float: 'left', width: 32, borderRadius: '50%', marginRight: 20 }} />
+      <i>@{issue.user.login}</i> Opened: <div style="margin-top: 10px">{issue.body}</div>
+      <button onClick={() => setShowComments(true)}>Show Comments</button>
+      {showComments && issue.comments.map(comment => <div>{comment.text}</div>)}
+    </div>
+  );
+};
+```
+
+这立刻引起了一些不好的事情。举个例子，我们给所有的Issue加载完整的评论数据，甚至在我们点击按钮前。此外，我们需要控制器支持一整个不同的MIME类型即使我们只是显示一些更多数据
+
+作为替代，控制器可以通过预加载VS Code会同样在内联框架中加载的脚本提供额外的功能给渲染器。这个脚本拥有可以用于与控制器交流的全局函数`postMessage`和`onDidReceiveKernelMessage`的访问权限。
+
+![](https://code.visualstudio.com/assets/api/extension-guides/notebook/kernel-communication.png)
+
+例如，您应该修改了您的控制器`renderedScript`来您给扩展宿主创建一个回连的地方创建一个引用新文件，并给渲染器编写一段全局交流脚本使用
+
+在您的控制器：
+
+```typescript
+class Controller {
+  // ...
+
+  readonly rendererScriptId = 'my-renderer-script';
+
+  constructor() {
+    // ...
+
+    this._controller.rendererScripts.push(
+      new vscode.NotebookRendererScript(
+        vscode.Uri.file(/* 脚本路径 */),
+        rendererScriptId
+      )
+    );
+  }
+}
+```
+
+在您的`package.json`指定您的脚本作为渲染器的依赖
+
+```json
+{
+  "activationEvents": ["...."],
+  "contributes": {
+    ...
+    "notebookRenderer": [
+      {
+        "id": "github-issue-renderer",
+        "displayName": "GitHub Issue Renderer",
+        "entrypoint": "./out/renderer.js",
+        "mimeTypes": [...],
+        "dependencies": [
+            "my-renderer-script"
+        ]
+      }
+    ]
+  }
+}
+
+```
+
+在您的脚本文件您可以声明交流函数来与控制器交流
+
+```typescript
+import 'vscode-notebook-renderer/preload';
+
+globalThis.githubIssueCommentProvider = {
+  loadComments(issueId: string, callback: (comments: GithubComment[]) => void) {
+    postKernelMessage({ command: 'comments', issueId });
+
+    onDidReceiveKernelMessage(event => {
+      if (event.data.type === 'comments' && event.data.issueId === issueId) {
+        callback(event.data.comments);
+      }
+    });
+  }
+};
+```
+
+然后您可以在渲染器中尽情使用这个。由于其他开发者也许在其他的笔记本和控制器不实现`githubIssueCommentProvider1`创建Github Issue输出，您需要检查是否全局由控制器渲染器呈现的是否可用。在这种情况下我们只需要在全局启用时显示**加载评论**按钮：
+
+```typescript
+const canLoadComments = globalThis.githubIssueCommentProvider !== undefined;
+const Issue: FunctionComponent<{ issue: GithubIssue }> = ({ issue }) => {
+  const [comments, setComments] = useState([]);
+  const loadComments = () =>
+    globalThis.githubIssueCommentProvider.loadComments(issue.id, setComments);
+
+  return (
+    <div key={issue.number}>
+      <h2>
+        {issue.title}
+        (<a href={`https://github.com/${issue.repo}/issues/${issue.number}`}>#{issue.number}</a>)
+      </h2>
+      <img src={issue.user.avatar_url} style={{ float: 'left', width: 32, borderRadius: '50%', marginRight: 20 }} />
+      <i>@{issue.user.login}</i> Opened: <div style="margin-top: 10px">{issue.body}</div>
+      {canLoadComments && <button onClick={loadComments}>Load Comments</button>}
+      {comments.map(comment => <div>{comment.text}</div>)}
+    </div>
+  );
+};
+```
+
+最后，我们希望设置与控制器的交流。`NotebookController.onDidReceiveMessage`方法在渲染器使用`postKernelMessage`函数发送一条消息时调用。为了实现这个方法，连接`onDidReceiveMessage`来监听消息：
+
+```typescript
+class Controller {
+  // ...
+
+  constructor() {
+    // ...
+
+    this._controller.onDidReceiveMessage(event => {
+      if (event.message.command === 'comments') {
+        _getCommentsForIssue(event.message.issueId).then(
+          comments =>
+            this._controller.postMessage({
+              type: 'comments',
+              issueId: event.message.issueId,
+              comments
+            }),
+          event.editor
+        );
+      }
+    });
+  }
+}
+```
