完成笔记本翻译

--- a/4. 扩展指南/8. 笔记本.md
+++ b/4. 扩展指南/8. 笔记本.md
@@ -516,3 +516,87 @@ class Controller {
   }
 }
 ```
+
+### 可交互笔记本（与扩展宿主交流）
+
+想象我们想要添加在单独编辑器中打开输出项的功能。为了实现它，渲染器需要能够发送信息给稍后启动编辑器的扩展宿主
+
+这将会在渲染器和控制器为两个独立扩展的脚本中很有用
+
+在渲染器扩展`package.json`指定`requiresMesssaging`值为`optional`，这样允许您的渲染器在没有扩展宿主访问权限时于共同的环境中工作
+
+```json
+{
+  "activationEvents": ["...."],
+  "contributes": {
+    ...
+    "notebookRenderer": [
+      {
+        "id": "output-editor-renderer",
+        "displayName": "Output Editor Renderer",
+        "entrypoint": "./out/renderer.js",
+        "mimeTypes": [...],
+        "requiresMessaging": "optional"
+      }
+    ]
+  }
+}
+```
+
+`requiresMessaging`的可选值包括：
+
+- `always`：需要消息发送。渲染器将只会在它是可以在扩展宿主中运行的扩展的一部分时使用
+- `optional`：当扩展宿主可用时渲染器最好有消息发送，但它不需要安装运行渲染器
+- `never`：渲染器不需要消息发送
+
+推荐最后两个选项，因为这确保了渲染器扩展在其他扩展宿主也许不必要启用的环境的可移植性
+
+渲染器脚本文件可以如下安装通信
+
+```typescript
+import { ActivationFunction } from 'vscode-notebook-renderer';
+
+export const activate: ActivationFunction = (context) => ({
+  renderOutputItem(data, element) {
+    // 使用输出`data`渲染输出
+    ....
+    // 信息发送可用性取决于`requiresMessaging的值`
+    if (!context.postMessage){
+      return;
+    }
+
+    // 此后为一些用户在输出中的操作（如点击一个按钮）
+    // 发送消息到扩展宿主请求启动编辑器
+    document.querySelector('#openEditor').addEventListener('click', () => {
+      context.postMessage({
+        request: 'showEditor',
+        data: '<custom data>'
+      })
+    });
+  }
+});
+```
+
+然后您可以如下在扩展中使用消息：
+
+```typescript
+const messageChannel = notebooks.createRendererMessaging('output-editor-renderer');
+messageChannel.onDidReceiveMessage(e => {
+  if (e.message.request === 'showEditor') {
+    // 通过`e.message.data`为识别的输出启动编辑器
+  }
+});
+```
+
+注意：
+- 为确保您的扩展在消息发送前运行于扩展宿主，添加`onRendered:<您的渲染器ID>`到您的`activationEvents`并在您的扩展`activate`函数中设置交流
+- 不是所有由渲染器扩展发送到扩展宿主的消息的递送是有保障的。用户可以在来自渲染器的消息递送前关闭笔记本
+
+## 调试支持
+
+对于一些控制器，比如那些实现一个编程语言的控制器，允许单元格执行调试是可取的。要添加调试支持，一个笔记本入口可以实现一个![调试适应器](16.%20调试器扩展.md)
+，通过直接实现[调试适应器协议](https://microsoft.github.io/debug-adapter-protocol/)（DAP），或者授权并转换协议供给已存在笔记本调试器（如在“vscode-simple-jupyter-notebook”示例做的一样）。一个更简单的方法是使用已存在未修改的调试扩展为满足不断变化的笔记本需求更改DAP（如在“vscode-notebook”做的一样）
+
+示例：
+- [vscode-notebook](https://github.com/microsoft/vscode-nodebook)：由VS Code内建JavaScript调试器提供的具有调试支持的Node.js笔记本和一些简单的协议更改
+- [vscode-simple-jypyter-notebook]：由已有的Xeus调试器提供的具有调试支持Jupyter笔记本
