--- a/4. 扩展指南/9. 自定义编辑器.md
+++ b/4. 扩展指南/9. 自定义编辑器.md
@@ -22,3 +22,12 @@
 - [`window.registerCustomEditorProvider`](/9.%20参考/1.%20VS%20Code%20API.md#window)
 - [`CustomTextEditorProvider`](/9.%20参考/1.%20VS%20Code%20API.md#CustomTextEditorProvider)
 
+## 自定义编辑器API基础
+
+自定义编辑器是在VS Code标准文本编辑器中显示的视图替代，它用于特定资源。自定义编辑器有两部分：用户互动的视图和扩展用来与底层互动的文档模型
+
+自定义编辑器的视图部分使用[Web视图](7.%20Web视图.md)实现。这允许您用标准HTML、CSS和JavaScript构建自定义编辑器的用户界面。Web视图不能直接访问VS Code API但是可以通过来回传递消息与扩展对话。查阅我们的[Web视图文档](7.%20Web视图.md)以了解更多Web视图信息和实践
+
+自定义编辑器的另一部分是文档模型。这个模型是您的扩展如何理解处理的资源（文件）。`CustomTextEditorProvider`使用VS Code标准[TextDocument](/9.%20参考/1.%20VS%20Code%20API.md#workspace)作为它的文档模型，并且所有的文件更改使用VS Code标准文本编辑API表达。另一方面，`CustomReadonlyEditorProvider`和`CustomEditorProvider`允许您提供您自己的非文本文件格式文档模型
+
+自定义编辑器对于每个资源拥有简单的文档模型，但是也许会存在多个文档编辑器实例（视图）。例如，假如您打开一个拥有`CustomTextEditorProvider`的文件，然后运行**View: Split editor（查看：拆分编辑器）**命令。这种情况下，仍然只有单个`TextDocument`，因为仍然只有单个工作空间资源的复制，但是现在有两个对于那个资源的Web视图
