--- a/4. 扩展指南/9. 自定义编辑器.md
+++ b/4. 扩展指南/9. 自定义编辑器.md
@@ -31,3 +31,55 @@
 自定义编辑器的另一部分是文档模型。这个模型是您的扩展如何理解处理的资源（文件）。`CustomTextEditorProvider`使用VS Code标准[TextDocument](/9.%20参考/1.%20VS%20Code%20API.md#workspace)作为它的文档模型，并且所有的文件更改使用VS Code标准文本编辑API表达。另一方面，`CustomReadonlyEditorProvider`和`CustomEditorProvider`允许您提供您自己的非文本文件格式文档模型
 
 自定义编辑器对于每个资源拥有简单的文档模型，但是也许会存在多个文档编辑器实例（视图）。例如，假如您打开一个拥有`CustomTextEditorProvider`的文件，然后运行**View: Split editor（查看：拆分编辑器）**命令。这种情况下，仍然只有单个`TextDocument`，因为仍然只有单个工作空间资源的复制，但是现在有两个对于那个资源的Web视图
+
+### CustomEditor 对比 CustomTextEditor
+
+存在两个自定义编辑器类：自定义文本编辑器和自定义编辑器。主要的不同在于它们如何定义文档模型
+
+`CustomTextEditorProvider`使用VS Code标准`TextDocument`作为数据模型。您可以为任何基于文本的文件类型使用`CustomTextModel`。`CustomTextEditor`相当简单实现，因为VS Code已经知道如何处理文本文件，因此可以实现诸如保存和为强制退出备份文件等操作
+
+另一方面，使用`CustomEditorProvider`，您的扩展使用自己的文档模型。这意味着您可以使用一个如图像的二进制格式`CustomEditor`，但同样表明您的扩展工程量更大，包括实现保存和备份。如果您的自定义编辑器只读，您可以避免这些杂事，比如预览编辑器。
+
+### 贡献点
+
+`customEditors`[贡献点](/9.%20参考/2.%20贡献点.md)是关于您的扩展如何告诉VS Code它提供的自定义编辑器。例如，VS Code需要知道您的自定义编辑器处理的文件类型和如何在UI中定义您的自定义编辑器
+
+这是个[自定义编辑器扩展示例](https://github.com/microsoft/vscode-extension-samples/tree/main/custom-editor-sample)中的基本`customEditor`贡献点：
+```json
+"contributes": {
+  "customEditors": [
+    {
+      "viewType": "catEdit.catScratch",
+      "displayName": "Cat Scratch",
+      "selector": [
+        {
+          "filenamePattern": "*.cscratch"
+        }
+      ],
+      "priority": "default"
+    }
+  ]
+}
+```
+
+`customEditors`是个数组，所以您的扩展可以贡献多个自定义编辑器。让我们分解自定义编辑器项自身：
+
+- `viewType` - 您的自定义编辑器独有的标识符。
+    这是VS Code绑定`package.json`中的自定义编辑器贡献点和您代码中自定义编辑器的实现。这必须在全扩展中独一无二，所以与其使用常用如`preview`的`viewType`，不如确保使用您扩展中独特如`myAmazingExtension.svgPreview`的`viewType`
+- `displayName` - 在VS Code UI中识别自定义编辑器的名称
+    显示名称在VS Code UI中显示，比如**View: Reopen with（查看：重新打开）**下拉菜单
+- `selector` - 指定自定义编辑器启用的文件
+    `selector`是一个或多个[通配符表达式](https://code.visualstudio.com/docs/editor/glob-patterns)。这些通配符表达式匹配文件名来决定自定义编辑器是否要为它们启用。如`*.png`的`filenamePattern`将为所有PNG文件启用自定义编辑器
+    
+    您同样可以创建更多特定表达式匹配文件名或文件夹名，例如`**/translations/*.json`
+
+- `priority` - （可选）指定自定义编辑器什么时候使用
+    `priority`控制当资源打开时，自定义编辑器什么时候使用。可能的值为：
+        - `"default"` - 尝试为所有匹配自定义编辑器`selector`的文件使用自定义编辑器。如果指定的文件多个自定义编辑器，用户必须选择他们想要使用的自定义编辑器
+        - `"option"` - 不要默认使用自定义编辑器但允许用户切换或配置为默认
+
+### 自定义编辑器启用
+
+当用户打开自定义编辑器中的一个时，VS Code出发`onCustomEditor.VIEW_TYPE`启用事件。在启用时，您的扩展必须调用`registerCustomEditorProvider`来使用期望的`viewType`注册自定义编辑器
+
+重要的是，要注意`onCustomEditor`只能在VS Code需要创建您的自定义编辑器实例时调用。如果VS Code仅仅显示用户一些关于可用自定义编辑器的信息——如使用**View: Reopen with（查看：重新打开）**命令——您的扩展不会被启用
