--- a/4. 扩展指南/9. 自定义编辑器.md
+++ b/4. 扩展指南/9. 自定义编辑器.md
@@ -83,3 +83,12 @@
 当用户打开自定义编辑器中的一个时，VS Code出发`onCustomEditor.VIEW_TYPE`启用事件。在启用时，您的扩展必须调用`registerCustomEditorProvider`来使用期望的`viewType`注册自定义编辑器
 
 重要的是，要注意`onCustomEditor`只能在VS Code需要创建您的自定义编辑器实例时调用。如果VS Code仅仅显示用户一些关于可用自定义编辑器的信息——如使用**View: Reopen with（查看：重新打开）**命令——您的扩展不会被启用
+
+## 自定义文本编辑器
+
+自定义文本编辑器允许您创建文本文件自定义编辑器。这可以是从普通无结构文本到[CSV](https://en.wikipedia.org/wiki/Comma-separated_values)或JSON、XML。自定义编辑器使用VS Code标准[TextDocument](/9.%20参考/1.%20VS%20Code%20API.md#TextDocument)作为它们的文档模型
+
+[自定义编辑器扩展示例](https://github.com/microsoft/vscode-extension-samples/tree/main/custom-editor-sample)包括一个简单的示例自定义文本编辑器，它用于Cat Scratch文件（后缀`.csratch`文件扩展的JSON文件）。让我们看一看实现一个自定义文本编辑器的重要部分
+
+### 自定义文本编辑器生命周期
+
