--- a/4. 扩展指南/9. 自定义编辑器.md
+++ b/4. 扩展指南/9. 自定义编辑器.md
@@ -92,3 +92,28 @@
 
 ### 自定义文本编辑器生命周期
 
+VS Code处理自定义文本编辑器视图组件（Web视图）和模型组件（`TextDocument`）的生命周期。当VS Code需要创建新的自定义编辑器实例时，呼唤您的扩展并在用户关闭标签页时清理编辑器实例和文档模型。
+
+为了理解这在实际上是如何运作，让我们从一个扩展的视角看看当用户打开关闭一个自定义文本编辑器发生了什么。
+
+#### 打开自定义文本编辑器
+
+这是当用户使用使用[自定义编辑器扩展示例](https://github.com/microsoft/vscode-extension-samples/tree/main/custom-editor-sample)先打开`.csratch`文件发生的事情：
+
+1. VS Code触发`onCustomEditor:catCustoms.catScratch`启用事件。
+
+如果扩展还未启用，这启用了它。在启用时，我们的扩展必须确保通过调用`registerCustomEditorProvider`为`catCustoms.catScratch`注册了`CustomTextEditorProvider`
+
+2. VS Code然后在注册`catCustoms.catScratch`的`CustomTextEditorProvider`里调用`resolveCustomTextEditor`
+
+这个方法接受用于被打开的资源的`TextDocument`和一个`WebviewPanel`。扩展必须为Web视图面板填充初始化HTML内容
+
+在返回`resolveCustomTextEditor`后，我们的自定义编辑器将显示给用户。Web视图内绘制的完全取决于我们的扩展
+
+同样的事情发生在每次我们打开一个自定义编辑器，甚至当您切分自定义编辑器时。尽管多个相同资源的自定义文本编辑器将共享相同的`TextDocument`，每个自定义编辑器实例拥有自己的`WebviewPanel`。记住：在`TextDocument`成为资源的模型时且Web视图面板是那个模型的视图时想想`TextDocument`
+
+#### 关闭自定义文本编辑器
+
+当用户关闭自定义文本编辑器，VS Code在`WebviewPanel`上触发`WebviewPanel.onDidDispose`事件。在这时，您的扩展应当清理任何与编辑器有关的资源（事件订阅，文件监视等等）
+
+当一定资源的最后的自定义编辑器关闭时，如果没有其它编辑器使用且没有其他扩展占用，资源的`TextDocument`也会被关闭。您可以检查`TextDocument.isClosed`属性查看`TextDocument`是否已经被关闭。当`TextDocument`被关闭时，使用自定义编辑器打开同样的资源将生成新`TextDocument`来打开。
