1. 添加翻译 2. 润色翻译

--- a/3. 扩展功能/2. 通用功能.md
+++ b/3. 扩展功能/2. 通用功能.md
@@ -9,11 +9,11 @@
 
 在[扩展指南/命令]主题中了解更多
 ## 配置
-一个扩展可以使用[`contributes.configuration`](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md##contributes.configuration)贡献点贡献扩展指定的配置并通过[`workspace.getConfiguration`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md##工作空间)API读取
+扩展可以使用[`contributes.configuration`](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md##contributes.configuration)贡献点贡献扩展指定的配置并通过[`workspace.getConfiguration`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md##工作空间)API读取
 ## 快捷键
-一个扩展可以添加自定义快捷键。在[`contributes.keybindings`](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md##contributes.keybindings)贡献点和[快捷键](https://code.visualstudio.com/docs/getstarted/keybindings)主题阅读更多
+扩展可以添加自定义快捷键。在[`contributes.keybindings`](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md##contributes.keybindings)贡献点和[快捷键](https://code.visualstudio.com/docs/getstarted/keybindings)主题阅读更多
 ## 上下文菜单
-一个扩展可以注册在VS Code UI不同的部分右击显示的自定义上下文菜单项。在[`contributes.menus`](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md##contributes.menus)贡献点阅读更多
+扩展可以注册在VS Code UI不同的部分右击显示的自定义上下文菜单项。在[`contributes.menus`](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md##contributes.menus)贡献点阅读更多
 ## 数据储存
 数据储存有四个选项
 - [`ExtensionContext.workspaceState`](/9.%20%E5%8F%82%E8%80%83/1.%20VS%20Code%20API.md###ExtensionContext)：您可以写入键值对的工作空间储存。VS Code管理储存并在相同工作空间再次打开时重置
