--- a/4. 扩展指南/2. AI.md
+++ b/4. 扩展指南/2. AI.md
@@ -17,3 +17,18 @@ VS Code包含可增强编程体验的强大AI功能：
 - **领域专业化**：创建应用于特定编程语言、框架或者领域的AI
 - **扩展聊天功能**：在聊天界面中添加特殊工具或者助手带来更强大的互动
 - **改良开发者生产力**：使用AI功能推动常规开发者的任务，如调试、代码检查或者测试
+
+## 扩展聊天体验
+# 语言模型工具
+语言模型工具允许您在VS Code中扩展特定领域能力的代理模式。在代理模式，这些工具基于用户聊天提示词自动调用，并执行特定任务或者从数据源和服务中检索信息。用户也可以明确地在他们的聊天提示词中使用#提及工具引用这些工具。
+
+要实现一个语言模型工具，在您的VS Code扩展中使用[语言模型工具API](/4.%20扩展指南/2.%20AI.md#工具)。语言模型工具可以访问所有的VS Code扩展API，并进一步融入编辑器。
+
+**重要优势**：
+- 作为自动编程工作流一部分的专业领域能力
+- 您的工具实现可以使用VS Code API，因为它运行在扩展宿主进程
+- 在Visual Studio市场中轻易地分发部署
+
+**关键需求**：
+- 远程部署需要扩展实现客户端-服务端交流
+- 不同工具间的重复利用需要模块化设计和实现
