--- a/4. 扩展指南/2. AI.md
+++ b/4. 扩展指南/2. AI.md
@@ -19,7 +19,7 @@ VS Code包含可增强编程体验的强大AI功能：
 - **改良开发者生产力**：使用AI功能推动常规开发者的任务，如调试、代码检查或者测试
 
 ## 扩展聊天体验
-# 语言模型工具
+### 语言模型工具
 语言模型工具允许您在VS Code中扩展特定领域能力的代理模式。在代理模式，这些工具基于用户聊天提示词自动调用，并执行特定任务或者从数据源和服务中检索信息。用户也可以明确地在他们的聊天提示词中使用#提及工具引用这些工具。
 
 要实现一个语言模型工具，在您的VS Code扩展中使用[语言模型工具API](/4.%20扩展指南/2.%20AI.md#工具)。语言模型工具可以访问所有的VS Code扩展API，并进一步融入编辑器。
@@ -29,6 +29,36 @@ VS Code包含可增强编程体验的强大AI功能：
 - 您的工具实现可以使用VS Code API，因为它运行在扩展宿主进程
 - 在Visual Studio市场中轻易地分发部署
 
-**关键需求**：
+**注意事项**：
 - 远程部署需要扩展实现客户端-服务端交流
 - 不同工具间的重复利用需要模块化设计和实现
+
+### MCP工具
+
+模型上下文协议（MCP）工具通过使用标准化协议，提供了将外部服务和语言模型的方式。在代理模式，这些工具基于用户聊天提示词自动调用，来处理专业化的任务或者在外部数据源中检索信息。
+
+MCP工具在VS Code外部运行，要么在用户的机器本地运行，或者作为一项远程服务。用户可以通过JSON配置MCP工具，或者让VS Code扩展编程配置他们。你可以通过各种语言SDK和部署选择实现MCP工具。
+
+因为MCP工具在VS Code外部运行，他们无法访问VS Code扩展API。
+
+**重要优势**：
+- 作为自动编程工作流一部分的专业领域能力
+- 本地远程部署选择
+- 在其他MCP客户端重复利用MCP服务端
+
+**注意事项**：
+- 无法访问VS Code扩展API
+- 分发部署需要用户设置MCP服务器
+### 聊天参与者
+聊天参与者是允许用户扩展咨询特定领域专家的方式的专业助手。在聊天中，用户可以通过用@提及它唤起聊天参与者，并传递关于特定主题或者领域的自然语言提示词。聊天参与者将负责处理整个聊天互动。
+
+为了实现聊天参与者，在您的VS Code扩展中使用[聊天API](#聊天)。聊天参与者可以访问所有VS Code扩展API，并更加深入融入编辑器。
+
+**重要优势**
+- 控制端对端互动流
+- 运行在扩展宿主进程中，可以访问VS Code扩展API
+- 在Visual Studio市场中轻易分发部署
+
+**注意事项**：
+- 远程部署需要扩展实现客户端-服务端交流
+- 在不同工具间重复利用需要模块化设计和实现
