--- a/4. 扩展指南/3. 命令.md
+++ b/4. 扩展指南/3. 命令.md
@@ -141,7 +141,7 @@ export function activate(context: vscode.ExtensionContext) {
 ### 控制命令在命令面板中的出现
 默认，所有通过`package.json`的`commands`节贡献的面向用户的命令在命令面板中出现。然而，许多命令仅仅在确定的条件中有价值如当有启用的指定语言文本编辑器或用户有确定的配置选项设置
 
-[`menus.commandPalette`](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.menus)贡献点让您限制一个命令何时应该显示在命令面板中。它需要目标命令的ID和一个[时间状语上下文](/9.%20%E5%8F%82%E8%80%83/6.%20%E6%97%B6%E9%97%B4%E7%8A%B6%E8%AF%AD%E4%B8%8A%E4%B8%8B%E6%96%87.md)控制命令显示
+[`menus.commandPalette`](/9.%20%E5%8F%82%E8%80%83/2.%20%E8%B4%A1%E7%8C%AE%E7%82%B9.md#contributes.menus)贡献点让您限制一个命令何时应该显示在命令面板中。它需要目标命令的ID和一个[时句](/9.%20参考/6.%20时句上下文.md)控制命令显示
 ```json
 {
   "contributes": {
@@ -158,11 +158,11 @@ export function activate(context: vscode.ExtensionContext) {
 ```
 现在`myExtension.sayHello`仅当用户在一个Markdown文件中显示在命令面板中
 ### 命令的启用
-命令通过一个`enablement`属性支持启用——它的值是一个[时间状语上下文](/9.%20%E5%8F%82%E8%80%83/6.%20%E6%97%B6%E9%97%B4%E7%8A%B6%E8%AF%AD%E4%B8%8A%E4%B8%8B%E6%96%87.md)。启用应用到所有菜单和已注册按键绑定
+命令通过一个`enablement`属性支持启用——它的值是一个[时句上下文](/9.%20参考/6.%20时句上下文.md)。启用应用到所有菜单和已注册按键绑定
 > 注意：菜单项`enablement`和`when`条件之间有语义重叠。后者用于阻止菜单中充满禁用项。例如，一个分析JavaScript正则表达式命令应该**当**文件是JavaScript时显示并且仅在指针在一个正则表达式上方时**启用**。`时间`状语通过在其他语言文件不显示命令阻止杂乱。强烈建议避免混乱的菜单
 
 最后，用菜单如命令面板或上下文菜单显示命令实现处理启用的不同方法。编辑器和浏览器上下文菜单在命令面板过滤它们时渲染启用/禁用项
-### 使用一个自定义时间状语上下文
+### 使用一个自定义时上下文
 如果您正在编写您自己的VS Code扩展并且需要使用一个`时间`状语上下文启用/禁用命令、菜单或视图且没有已存在的键适合您的需求，那么您可以添加您自己的上下文
 
 下面第一个示例设置您可以在命令启用使用`when`属性的键`myExtension.showMyCommand`为真。第二个示例存储一个您可以通过`时间`状语上下文使用的值检查冷却开放事物数大于2
