--- a/4. 扩展指南/7. 树状视图.md
+++ b/4. 扩展指南/7. 树状视图.md
@@ -351,7 +351,7 @@ export function activate(context: vscode.ExtensionContext) {
 - `view/title` - 在视图标题中显示操作的位置。主要或内联操作使用`"group": "navigation"`，剩下在`...`菜单中的是次要的操作。
 - `view/item/context` - 给树项目显示操作的位置。内联操作使用`"group": "navigation"`，剩下在`...`菜单中的是次要的操作。
 
-您可以使用一个[时间状语从句](/9.%20参考/6.%20时间状语上下文.md)控制这些操作的可见
+您可以使用一个[时句](/9.%20参考/6.%20时句上下文.md)控制这些操作的可见
 
 ![](https://code.visualstudio.com/assets/api/extension-guides/tree-view/view-actions.png)
 
@@ -450,7 +450,7 @@ export function activate(context: vscode.ExtensionContext) {
 
 ![](https://code.visualstudio.com/assets/api/extension-guides/tree-view/welcome-content.png)
 
-欢迎内容中链接受支持。按照惯例，一个独自成行的链接是一个按钮。每个欢迎内容同样可以包含一个[时间状语从句](/9.%20参考/6.%20时间状语上下文.md)。想要更多例子，参阅[内建Git扩展](https://github.com/microsoft/vscode/tree/main/extensions/git)
+欢迎内容中链接受支持。按照惯例，一个独自成行的链接是一个按钮。每个欢迎内容同样可以包含一个[时句](/9.%20参考/6.%20时句上下文.md)。想要更多例子，参阅[内建Git扩展](https://github.com/microsoft/vscode/tree/main/extensions/git)
 
 ## TreeDataProvider
 
