--- a/4. 扩展指南/2. AI.md
+++ b/4. 扩展指南/2. AI.md
@@ -393,3 +393,141 @@ LLM生成回复，可能包括一个或多个请求调用工具。
 - [语言模型API参考](/9.%20参考/1.%20VS%20Code%20API.md)
 - [在VS Code扩展中注册MCP服务器](#MCP开发者指南)
 - [在代理模式下使用MCP工具](https://code.visualstudio.com/docs/copilot/customization/mcp-servers)
+
+# MCP开发者指南
+
+
+模型上下文协议（MCP）是让AI模型能通过统一接口与外部工具和服务互动的开放标准。Visual Studio Code实现完全的MCP规范，允许您创建MCP服务端提供工具、提示词和资源扩展VS Code AI代理的能力。
+
+MCP服务端和内建工具、扩展贡献工具同样提供VS Code可用的三种工具类型之一。在[工具类型](https://code.visualstudio.com/docs/copilot/agents/agent-tools#_types-of-tools)了解更多。
+
+本指南涵盖您构建MCP服务端所需要的一切，让您与VS Code和其他MCP客户端紧密协作
+
+> 提示
+> 有关作为终端用户使用MCP的信息，参见[在VS Code使用MCP服务端](https://code.visualstudio.com/docs/copilot/customization/mcp-servers)
+
+## 为什么使用MCP服务端
+
+在VS Code中实现MCP服务端扩展语言模型工具聊天有如下优势：
+
+- 使用特殊、专业的工具，自动作为用户提示词的回复部分调用，**扩展代理模式**。例如，允许搭建、查询数据库来动态提供LLM相关上下文。
+- 为本地或远程情景提供**灵活部署选择**
+- 在不同工具和平台**复用**您的MCP服务端。
+
+您可能会在下列情景考虑用[语言模型API]实现语言模型工具：
+
+- 您想要使用扩展API与VS Code深度融合。
+- 您想要通过Visual Studio市场分发工具与更新。
+
+## VS Code支持的MCP特性
+
+VS Code支持下面MCP能力：
+
+- [传输](https://modelcontextprotocol.io/specification/2025-06-18/basic/transports)：
+    - 本地标准输入/输出(stdio)
+    - 流HTTP(http)
+    - 服务端发送事件(sse) - 旧版支持
+- [特性](https://modelcontextprotocol.io/specification/2025-06-18#features)：
+    - 工具：使用额外工具扩展[代理模式](https://code.visualstudio.com/docs/copilot/chat/copilot-chat#_builtin-chat-modes)
+    - 提示词：在聊天使用斜杠命令用复用提示词
+    - 资源：提供数据和内容，用户可以添加作为聊天上下文或直接在VS Code中互动。
+    - 获取：向用户请求输入
+    - 采样：使语言模型请求使用用户配置模型和订阅
+    - 验证：使用OAuth验证对MCP服务端的访问
+    - 服务端说明
+    - 根：提供用户工作空间根目录的信息
+    - [MCP应用程序](https://modelcontextprotocol.github.io/ext-apps/api/)：返回工具互动性UI组件
+### 工具
+#### 工具定义
+VS Code支持代理模式下的MCP工具。在此模式下，MCP工具可以基于任务需要调用。用户可以使用工具选择器启用或配置它们。工具简介在工具选择器以及在运行工具前的确认窗口和工具名称一同展示。
+
+![](https://code.visualstudio.com/assets/api/extension-guides/ai/mcp/mcp-tools-picker.png)
+
+用户可以编辑在工具确认对话框中的模型生成的输入参数。确认对话框会为所有没有被标记为`readOnlyHint`注解的工具展示。
+
+![](https://code.visualstudio.com/assets/api/extension-guides/ai/mcp/mcp-tool-input-parameters.png)
+
+#### 动态工具搜索
+VS Code也支持[动态工具搜索](https://modelcontextprotocol.io/specification/2025-06-18/server/tools#tool-discovery-and-updates)，允许服务端在运行时注册工具。例如，服务端可以基于检测到工作空间或用户聊天提示词的语言或框架提供不同的工具。
+
+#### 工具注解
+为了提供额外关于工具行为元数据，您可以使用[工具注解](https://modelcontextprotocol.io/docs/concepts/tools#tool-annotations)
+- `title`：人类可阅读的工具标题，当工具被调用时在聊天视图展示。
+- `readOnlyHint`：表明工具只读的可选提示。VS Code不会在运行只读工具前征求同意。
+
+### 资源
+资源允许您用结构化的方式提供数据和内容给用户。用户可以直接在VS Code中访问资源，或者在聊天提示词中用作上下文。例如，MCP服务端可以生成截图，使它们作为资源，或提供对实时更新的日志文件的访问。
+
+当您定义MCP资源时，资源名称在MCP资源快速选取中展示。资源可以通过**MCP：浏览资源**命令或在聊天请求中找到**添加上下文**，然后选择**MCP资源**。资源可以包括文本或二进制内容。
+
+![](https://code.visualstudio.com/assets/api/extension-guides/ai/mcp/mcp-resources-picker.png)
+
+VS Code支持资源更新，允许用户在编辑器中实时查看资源内容更新。
+
+#### 资源模板
+
+VS Code同样支持[资源模板](https://modelcontextprotocol.io/specification/2025-06-18/server/resources#resource-templates)，允许用户在引用资源时提供输入参数。例如，数据库查询工具可能要求数据表名称。
+
+当访问模板资源时，有哦那个在快速选单中提供需要的参数。您可以提供参数建议值的补全。
+
+### 提示词
+在用户可以通过斜杠命令(`mcp.servername.promptname`)调用聊天提示词模板的聊天中，提示词是可以复用的。提示词在引导用户使用您的服务端是非常有用的，它可以强调不同的工具或提供内建复杂工作流以适应用户本地上下文和服务。
+
+如果您定义了提示词输入参数建议值的[补全](https://modelcontextprotocol.io/specification/2025-06-18/server/utilities/completion)，VS Code会显示对话框自用户收集输入。
+
+```typescript
+server.prompt(
+    'teamGreeting',
+    'Generate a greeting for team members',
+    {
+        name: completable(z.string(), value => {
+            return ['Alice', 'Bob', 'Charlie'].filter(n => n.startsWith(value));
+        })
+    },
+    async ({ name } => ({
+        messages: [
+            {
+                role: 'assistant',
+                content: { type: 'text', text: `Hello ${name}, welcome to the team!` }
+            }
+        ]
+    }))
+);
+```
+![](https://code.visualstudio.com/assets/api/extension-guides/ai/mcp/mcp-prompt-argument.png)
+
+> 注意
+> 用户可以在提示词对话框输入控制台命令并使用命令输出作为提示词的输入。
+
+当您的提示词响应包含资源类型时，VS Code将资源作为上下文提供给聊天提示词。
+
+### 验证
+VS Code提供的MCP服务端需要验证，允许用户与一个代表它们服务账户的MCP服务端互动。
+
+[验证规范](https://modelcontextprotocol.io/specification/2025-06-18/basic/authorization)清晰地将MCP服务端分割为资源服务端和验证服务端，允许开发者将验证委托给已有的身份认证提供者（IdP）而非从零构建自己的OAuth实现。
+
+VS Code有来自GitHub和Microsoft Entra的内建验证支持。如果您的MCP服务端实现最新的规范并且使用GitHub或Microsoft Entra作为验证服务端，用户可以通过**账户菜单** > **管理信任的MCP服务端**操作管理哪些MCP服务端可以访问账户。
+
+![](https://code.visualstudio.com/assets/api/extension-guides/ai/mcp/manage-trusted-mcp.png)
+
+VS Code支持使用GitHub和Microsoft Entra之外的其他OAuth 2.1标准和2.0标准验证。VS Code会启动[动态客户端注册（DCR）](https://modelcontextprotocol.io/specification/2025-06-18/basic/authorization#dynamic-client-registration)握手，如果IdP不支持DCR，随后回到客户端证书工作流。这为每个MCP服务端不同的IdP或特殊客户端ID秘密对有根据地提供了更多灵活性。
+
+用户随后可以通过**账户菜单**查看验证状态。如果要移除动态客户端注册，用户可以在命令面板使用**验证：移除动态验证提供者**命令。
+
+在下面是确保MCP服务端和VS Code OAuth工作流正常工作的检查列表：
+
+1. MCP服务端定义了[MCP验证规范](https://modelcontextprotocol.io/specification/2025-06-18/basic/authorization)
+2. IdP必须支持DCR或客户端证书中的一种。
+
+3. URL重定向列表必须包含这些URL：`http://127.0.0.1:33418`和`https://vscode.dev/redirect`
+
+当DCR不被MCP服务端支持时，用户会回到客户端证书流程：
+![](https://code.visualstudio.com/assets/api/extension-guides/ai/mcp/mcp-auth-dynamic-client-required.png)
+![](https://code.visualstudio.com/assets/api/extension-guides/ai/mcp/mcp-auth-client-id.png)
+![](https://code.visualstudio.com/assets/api/extension-guides/ai/mcp/mcp-auth-client-secret.png)
+> 注意
+> VS Code仍然支持作为验证服务端的MCP服务端，但推荐为最新服务端使用最新规范。
+
+### 采样
+
+VS Code为MCP服务端提供了[采样](https://modelcontextprotocol.io/specification/2025-06-18/client/sampling)权限。这允许您的MCP服务端使用用户配置模型和订阅发出语言模型请求
